fix: update overflow-x property from hidden to clip in index.css

--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@
 
 html, body {
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: clip;
 }
 
 html {
